# SCG-Ask

./: README.md
.github/workflows/: deploy.yaml
backend/: Cargo.toml  Dockerfile  config.yaml
backend/src/: config.rs  main.rs  startup.rs
backend/src/routes/: mod.rs  send.rs
deployment/base/be/: deployment.yaml  ingress.yaml  service.yaml
deployment/base/fe/: deployment.yaml  ingress.yaml  service.yaml
deployment/overlays/prod/be/: domain.json  kustomization.yaml  namespace.yaml  secret.yaml
deployment/overlays/prod/fe/: kustomization.yaml  secret.yaml
frontend/: Cargo.toml  Dockerfile
frontend/src/: app.rs  build.rs  env.rs  lib.rs
frontend/src/components/: form.rs  mod.rs  navbar.rs
frontend/src/pages/: home.rs
frontend/static/: index.html  styles.css
