[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path= "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] } 
env_logger = "0.9"
lettre = "0.10.0"
